--- a/src/components/SlidesImg/SliderImg.css
+++ b/src/components/SlidesImg/SliderImg.css
@@ -12,19 +12,19 @@
 }
 
 .slider-img {
-    width: 90%; /* Ajusta el tamaño de la imagen */
+    width: 90%;
     height: 80%;
-    max-width: 250px; /* Límite máximo para pantallas grandes */
-    object-fit: cover; /* Mantiene la relación de aspecto sin deformar */
-    border-radius: 10px; /* Bordes redondeados */
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra suave */
+    max-width: 250px;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-/* Ajuste en pantallas más pequeñas */
+
 @media (max-width: 768px) {
     .slider-img {
-        max-width: 50%;
-        height: 50%;
+        max-width: 80%;
+        height: 70%;
     }
     .slider-container {
         text-align: center;
@@ -33,7 +33,7 @@
 
 @media (max-width: 480px) {
     .slider-img {
-        max-width: 60%;
+        max-width: 75%;
         height: 60%;
     }
     .slider-container {
